Bump master to SE 11, introduce JPMS descriptors (#1093)
* JPMS init
* running EclipseLink on the module path should still be considered as highly experimental.

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>